--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -4,6 +4,7 @@
 
 h1{
     font-family: 'Source Sans Pro', sans-serif;
+    font-size: 35px;
     text-align: center;
 }
 
